--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Art Vandelay\""
+    "name = \n",
+    "\"Art Vandelay\""
    ]
   },
   {
