Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Jason Rose\""
+    "name = \"jason Rose\""
    ]
   },
   {
@@ -546,11 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jason Rose'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name.title()"
    ]
