--- a/index.ipynb
+++ b/index.ipynb
@@ -517,11 +517,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"jason Rose\""
+    "name = \"jason rose\""
    ]
   },
   {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "'Jason Rose'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
